tests/rosetta/out/Fortran/averages-pythagorean-means.error
gfortran error: exit status 1
/workspace/mochi/tests/rosetta/out/Fortran/averages-pythagorean-means.f90:21:3:

   21 |   main()
      |   1
Error: Unclassifiable statement at (1)
/workspace/mochi/tests/rosetta/out/Fortran/averages-pythagorean-means.f90:57:5:

   57 |     n = 1
      |     1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
/workspace/mochi/tests/rosetta/out/Fortran/averages-pythagorean-means.f90:67:8:

   67 |     g = nthRoot(prod,10)
      |        1
Error: Type mismatch in argument ‘x’ at (1); passed INTEGER(4) to REAL(4)
/workspace/mochi/tests/rosetta/out/Fortran/averages-pythagorean-means.f90:43:11:

   43 |       if ((powf(mid,n) > x)) then
      |           1
Error: Type mismatch in argument ‘base’ at (1); passed INTEGER(4) to REAL(4)
/workspace/mochi/tests/rosetta/out/Fortran/averages-pythagorean-means.f90:73:37:

   73 |     write(s3,'(G0)') (((a >= g) .and. g) >= h)
      |                                     1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
